[package]
name = "rb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# For command line parsing
clap = { version = "4.4.5", features = ["derive"] }
# To make HTTP request
reqwest = "0.11.20"
# For reqwest lib
tokio = { version = "1.32.0", features = ["full"] }
# To simplify error handling
anyhow = "1.0.75"