[package]
name = "rb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# For command line parsing
clap = { version = "4.4.5", features = ["derive"] }
# To make HTTP request
reqwest = { version = "0.11.20", features = ["json"]}
# For reqwest lib
tokio = { version = "1.32.0", features = ["full"] }
# To simplify error handling
anyhow = "1.0.75"
# For handling JSON data
serde = "1.0.188"
serde_json = "1.0.107"
serde_derive = "1.0.188"
futures = "0.3.30"
crossterm = "0.27.0"